--- a/src/backend-dbus/CMakeLists.txt
+++ b/src/backend-dbus/CMakeLists.txt
@@ -43,6 +43,10 @@ add_gdbus_codegen (BACKEND_GENERATED_SOURCES dbus-end-session-dialog
                    org.gnome.SessionManager
                    ${CMAKE_CURRENT_SOURCE_DIR}/org.gnome.SessionManager.EndSessionDialog.xml)
 
+add_gdbus_codegen (BACKEND_GENERATED_SOURCES dbus-upstart
+                   com.ubuntu 
+                   ${CMAKE_CURRENT_SOURCE_DIR}/com.ubuntu.Upstart.xml)
+
 set (SOURCES actions.c guest.c users.c backend-dbus.c utils.c)
 
 # add warnings/coverage info on handwritten files
